--- a/src/onegov/town6/theme/styles/org.scss
+++ b/src/onegov/town6/theme/styles/org.scss
@@ -404,3 +404,12 @@ ul.pagination li {
     }
 
 }
+
+/*
+    Leaflet customisations
+ */
+
+.leaflet-top.leaflet-top,
+.leaflet-bottom.leaflet-bottom {
+    z-index: 998;
+}
